Testing connecting to repository

--- a/htdocs/wp-content/themes/willbridge/style.css
+++ b/htdocs/wp-content/themes/willbridge/style.css
@@ -11,6 +11,10 @@ Tags: dark, light, white, one-column, two-columns, left-sidebar, right-sidebar, 
 */
 
 
+/*
+This is to test if I'm connected.
+ */
+
 html, body, #page {height:100%;}
 
 body {
